<resources>
    <string name="app_name" translatable="false">PCStudent</string>
    <string name="user_name">¡Ingresa un nombre de usuario!</string>
    <string name="button1">¡Vamos!</string>
    <string name="WELCOME">¡BIENVENIDO!</string>
    <string name="Add">Añadir</string>
    <string name="Logo">Logo</string>
    <string name="category_1">Informática General</string>
    <string name="category_2">Almacenamiento</string>
    <string name="category_3">Redes</string>
    <string name="category_4">Procesadores</string>
    <string name="category_5">Personales</string>
    <string name="category_6">Categoria 6</string>
    <string name="todo">TODO</string>
    <string name="Home">Inicio</string>
    <string name="Love">Síguenos</string>
    <string name="Tools">Ajustes</string>
    <string name="Menú">Menú principal</string>
    <string name="Next">Siguiente</string>
    <string name="Finish">Terminar</string>
    <string name="Start_Again">Empezar de nuevo</string>
    <string name="Resultados">Resultados</string>
    <string name="registrar">Registrar</string>
    <string name="puntuacion">Puntaje = 0 / 25</string>
    <string name="maximo_puntaje">MáxPuntaje = 0</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Salir">Salir</string>
    <string name="Regresar">Regresar</string>
    <string name="usuario">Usuario:</string>
    <string name="vidas">Vidas = 3</string>
    <string name="Correcto">Correcto</string>
    <string name="Incorrecto">Incorrecto</string>
    <string name="Puntaje">Puntaje =</string>
</resources>