<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/textura"
    android:backgroundTintMode="screen"
    tools:context=".CuerpoActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_barra"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/miriam_libre"
        android:gravity="center_vertical"
        android:text="@string/WELCOME"
        android:textAlignment="center"
        android:textColor="#090000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="RtlCompat" />

    <View
        android:id="@+id/view_barra"
        android:layout_width="365dp"
        android:layout_height="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_barra"
        android:background="#1F3167"
        />

    <TextView
        android:id="@+id/tv_bar_menu"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@drawable/ic_menu_bar"
        android:backgroundTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_add"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/Add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_bar_menu"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_home"
        app:srcCompat="@drawable/ic_baseline_add_24" />

    <ImageButton
        android:id="@+id/ib_what"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="12dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/Tools"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toEndOf="@+id/iv_add"
        app:srcCompat="@android:drawable/ic_menu_manage" />

    <ImageView
        android:id="@+id/iv_home"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/Home"
        android:onClick="Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <ImageView
        android:id="@+id/iv_web"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/Love"
        android:onClick="Web"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_add"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toEndOf="@+id/iv_home"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24" />

    <TextView
        android:id="@+id/tv_memory_user"
        android:layout_width="14dp"
        android:layout_height="9dp"
        android:layout_marginTop="8dp"
        android:textColor="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_barra" />

    <Button
        android:id="@+id/bt_cat_1"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/drawable_button"
        android:backgroundTint="#002C54"
        android:drawableBottom="@android:drawable/btn_star_big_on"
        android:drawingCacheQuality="high"
        android:fadingEdge="horizontal|vertical"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/miriam_libre"
        android:onClick="Quiz_One"
        android:paddingTop="15dp"
        android:paddingBottom="35dp"
        android:shadowColor="#000000"
        android:soundEffectsEnabled="true"
        android:text="@string/category_1"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_barra" />

    <Button
        android:id="@+id/bt_cat_3"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/drawable_button"
        android:backgroundTint="#6E6702"
        android:drawableBottom="@drawable/ic_baseline_computer_24"
        android:fontFamily="@font/miriam_libre"
        android:paddingTop="15dp"
        android:paddingBottom="35dp"
        android:text="@string/category_3"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/bt_cat_4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_cat_1" />

    <Button
        android:id="@+id/bt_cat_6"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/drawable_button"
        android:backgroundTint="#004D47"
        android:drawableBottom="@drawable/ic_baseline_tablet_24"
        android:fontFamily="@font/miriam_libre"
        android:paddingTop="15dp"
        android:paddingBottom="35dp"
        android:text="@string/category_6"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_bar_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/bt_cat_5"
        app:layout_constraintTop_toBottomOf="@+id/bt_cat_4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_cat_5"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="210dp"
        android:background="@drawable/drawable_button"
        android:backgroundTint="#D19E08"
        android:drawableBottom="@drawable/ic_baseline_live_tv_24"
        android:fontFamily="@font/miriam_libre"
        android:paddingTop="15dp"
        android:paddingBottom="35dp"
        android:text="@string/category_5"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_bar_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_cat_3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_cat_2"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/drawable_button"
        android:backgroundTint="#7F152E"
        android:drawableBottom="@android:drawable/ic_delete"
        android:fontFamily="@font/miriam_libre"
        android:onClick="Conceptos"
        android:paddingTop="15dp"
        android:paddingBottom="35dp"
        android:text="@string/category_2"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/bt_cat_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_barra" />

    <Button
        android:id="@+id/bt_cat_4"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/drawable_button"
        android:backgroundTint="#3B204F"
        android:drawableBottom="@drawable/ic_baseline_5g_24"
        android:fontFamily="@font/miriam_libre"
        android:paddingTop="15dp"
        android:paddingBottom="35dp"
        android:text="@string/category_4"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_cat_2" />

</androidx.constraintlayout.widget.ConstraintLayout>