<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/textura"
    android:backgroundTintMode="screen"
    tools:context=".Imagenes_Activity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintBottom_toTopOf="@id/tv_user_i"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_user_i"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="5dp"
        android:text="@string/usuario"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tv_score_i"
        app:layout_constraintEnd_toStartOf="@id/tv_max"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <TextView
        android:id="@+id/tv_max"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/maximo_puntaje"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/tv_vidas_i"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_user_i"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_score_i"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="10dp"
        android:text="@string/puntuacion"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/view_top"
        app:layout_constraintEnd_toStartOf="@id/tv_vidas_i"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_user_i" />

    <TextView
        android:id="@+id/tv_vidas_i"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:text="@string/vidas"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/view_top"
        app:layout_constraintEnd_toStartOf="@id/iv_vidas2"
        app:layout_constraintStart_toEndOf="@id/tv_score_i"
        app:layout_constraintTop_toBottomOf="@id/tv_max" />


    <TextView
        android:id="@+id/view_top"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="#263B91"
        app:layout_constraintBottom_toTopOf="@+id/iv_imagenes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_vidas_i" />

    <ImageView
        android:id="@+id/iv_vidas2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/tres_vidas"
        android:contentDescription="@string/vidas"
        app:layout_constraintBottom_toTopOf="@id/view_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_vidas_i"
        app:layout_constraintTop_toBottomOf="@id/tv_max" />


    <ImageView
        android:id="@+id/iv_imagenes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_top"
        tools:srcCompat="@tools:sample/avatars" />


</androidx.constraintlayout.widget.ConstraintLayout>
