<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/textura"
    android:backgroundTintMode="screen"
    tools:context=".Main_Activity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="100dp"
        android:background="#007C3C3C"
        android:contentDescription="@string/todo"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@mipmap/logo_main" />

    <Button
        android:id="@+id/btvamos"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/drawable_button"
        android:backgroundTint="#0D1E53"
        android:fontFamily="@font/miriam_libre"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="Vamos"
        android:text="@string/registrar"
        android:textAlignment="gravity"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pt_user" />

    <EditText
        android:id="@+id/pt_user"
        style="@android:style/Widget.Material.Light.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:backgroundTint="#263B91"
        android:fontFamily="@font/miriam_libre"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:shadowColor="#000000"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/btvamos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>